<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CCSocial</string>
    <string name="app_name_cn">圈圈社交</string>
    <string name="app_index_text">相遇就如圈圈相交</string>
    <string name="app_index_label_slogen">发现生活中的圈子</string>
    <string name="app_relation_label_slogen">让圈与圈相遇</string>
    <string name="app_chat_label_slogen">当圈与圈产生交集</string>
    <string name="app_me_label_slogen">每个人都不是一个独立的圈</string>
    <string name="icon_login_user">&#xe618;</string>
    <string name="icon_login_pwd">&#xe62e;</string>
    <string name="text_guide_skip">跳过</string>
    <string name="text_guide_pager_1">每个人，都是一个孤独的圈圈</string>
    <string name="text_guide_pager_2">我们在黑夜中寻找光明</string>
    <string name="text_guide_pager_3">如果遇见，请面带微笑</string>
    <string name="text_login_to_register">去注册</string>
    <string name="text_login_phone">手机号码</string>
    <string name="text_login_code">验证码</string>
    <string name="text_login_password">密码</string>
    <string name="text_login_send">获取验证</string>
    <string name="text_login_login">登录</string>
    <string name="text_login_agreement_1">我已阅读并同意</string>
    <string name="text_login_agreement_2"><u>用户协议</u></string>
    <string name="text_login_phone_null">电话号码不能为空</string>
    <string name="text_login_phone_error">电话号码格式错误</string>
    <string name="text_login_pw_null">密码不能为空</string>
    <string name="text_login_code_null">验证码不能为空</string>
    <string name="text_login_now_login_text">正在登陆...</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_login_fail">登录失败</string>
    <string name="text_login_not_sure">您还未同意用户协议</string>
    <string name="text_send_code_success">获取成功</string>
    <string name="text_send_code_fail">获取失败</string>
    <string name="text_login_phone_no_register">用户未注册</string>
    <string name="text_login_phone_no_pwd">用户未设置密码</string>
    <string name="text_login_pw_error">密码错误</string>
    <string name="text_register">注册</string>
    <string name="text_register_setPwd">设置密码</string>
    <string name="text_register_phone_register">拿起画笔，为自己画个圈吧</string>
    <string name="text_register_to_login">去登录</string>
    <string name="text_register_success">注册成功</string>
    <string name="text_register_phone_fail">注册失败，手机号已被注册</string>
    <string name="text_register_fail">注册失败，手机号已被注册</string>
    <string name="text_register_take_photo">选择照片</string>
    <string name="text_network_success">请求成功</string>
    <string name="text_network_fail">请求失败</string>
    <string name="text_main_index">圈圈</string>
    <string name="text_main_contact">关系</string>
    <string name="text_main_chat">消息</string>
    <string name="text_main_me">我的</string>
    <string name="text_interest_label" >兴趣选择</string>
    <string name="text_edu_bind_label" >教务绑定</string>
    <string name="text_edu_bind_tip" >&#160;&#160;&#160;&#160;绑定Hdu教务账号，可为您创建课程表，并为您推荐闲暇时间的活动。</string>
    <string name="text_edu_bind_user" >Hziee学号</string>
    <string name="text_edu_bind_pwd" >Hziee密码</string>
    <string name="text_edu_bind_sure" >绑定账号</string>
    <string name="text_edu_bind_true" >绑定成功</string>
    <string name="text_edu_bind_false" >绑定失败</string>
    <string name="text_index_draw_circle">画个圈</string>
    <string name="text_index_my_circle">我的圈子</string>
    <string name="text_index_recommend_activity">活动圈推荐</string>
    <string name="text_index_recommend_topics">话题圈推荐</string>
    <string name="text_index_more">查看更多</string>
    <string name="text_index_draw_activity_label">活动圈</string>
    <string name="text_index_draw_topics_label">话题圈</string>
    <string name="text_login_phone_pwd_login">手机密码登录</string>
    <string name="text_login_code_pwd_login">验证码登录</string>
    <string name="text_interest_sure">确定</string>
    <string name="text_my_activity_circle">活动圈</string>
    <string name="text_my_topics_circle">话题圈</string>
    <string name="text_my_circle_filter_type">类型</string>
    <string name="text_my_circle_filter_status">状态</string>
    <string name="text_my_circle_filter_time_label">请选择筛选时间范围</string>
    <string name="text_my_circle_filter_start_time">开始时间</string>
    <string name="text_my_circle_filter_end_time">结束时间</string>
    <string name="text_my_circle_filter_start_to_end_time">开始-结束时间</string>
    <string name="text_detail_activity_label">活动详情</string>
    <string name="text_detail_activity_join">跳进圈子</string>
    <string name="text_detail_activity_join_s">匿名进圈</string>
    <string name="text_me_info">个人主页</string>
    <string name="text_me_toast">消息</string>
    <string name="text_me_wallet">钱包</string>
    <string name="text_me_history">历史</string>
    <string name="text_me_credit">信誉</string>
    <string name="app_key">3c286f529216066446ef91b3f0a62fd3</string>
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="login_privatization_config_str">私有化配置跳转</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_hint_subtype">请输入子类型（可选）</string>
    <string name="input_account">请输入好友圈圈帐号</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="about">关于</string>
    <string name="privatization_config">私有化配置</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2020 网易公司版权所有</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_history_query_ingore">云消息记录(被清除消息入库)</string>
    <string name="message_history_query_remember">云消息记录(被清除消息不入库)</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_clear_record">清空本地消息记录(记录操作)</string>
    <string name="message_clear_not_record">清空本地消息记录(不记录操作)</string>
    <string name="message_p2p_clear">清空点对点历史消息</string>
    <string name="message_p2p_clear_tips">确定清空点对点历史消息?</string>
    <string name="cloud_message_clear">清空云端历史消息</string>
    <string name="cloud_message_clear_tips">确定清空云端历史消息?</string>
    <string name="sure_keep_roam">确认单保留漫游</string>
    <string name="sure_sync">确认多端同步</string>
    <string name="message_info">聊天信息</string>
    <string name="avchat_list">音视频通话记录</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
</resources>