<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite">
<!--    <View-->
<!--        android:id="@+id/pos_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="@color/colorPrimary" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_size_30">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="148dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:src="@drawable/img_ccsocial_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_cn"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/shape_divider"
                android:dividerPadding="1dp"
                android:orientation="vertical"
                android:showDividers="end">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/img_edu_user"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/icon_login_user" />
                    <EditText
                        android:id="@+id/text_edu_user"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/login_edit_bg"
                        android:hint="@string/text_login_phone"
                        android:inputType="phone"
                        android:paddingLeft="5dp"
                        android:textSize="@dimen/text_size_16"
                        android:textColor="@color/colorLabelBlack" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryWhite"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_edu_pwd"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/icon_login_code" />
                <EditText
                    android:id="@+id/text_edu_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_edit_bg"
                    android:hint="@string/text_login_code"
                    android:padding="5dp"
                    android:textSize="@dimen/text_size_16"
                    android:inputType="number"
                    android:textColor="@color/colorLabelBlack" />

                <TextView
                    android:id="@+id/btn_send_code"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/text_login_send"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle"
                android:text="@string/text_login_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <!--                <ImageView-->
                <!--                    android:id="@+id/img_login_type"-->
                <!--                    android:layout_width="25dp"-->
                <!--                    android:layout_height="25dp"-->
                <!--                    android:layout_gravity="left"-->
                <!--                    android:onClick="onClick"-->
                <!--                    app:srcCompat="@drawable/icon_login_phone_g" />-->

                <TextView
                    android:id="@+id/btn_login_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:onClick="onClick"
                    android:text="@string/text_login_phone_pwd_login"
                    android:textColor="@color/colorFontGray"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/btn_register_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="onClick"
                    android:text="@string/text_login_to_register"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="@dimen/text_size_16" />

                <ImageView
                    android:id="@+id/img_register_arrow"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/icon_login_right_blue_arrow" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_login_read"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="auto"
            android:onClick="onClick"
            android:src="@drawable/icon_login_sure_g" />

        <TextView
            android:id="@+id/text_login_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/text_size_13"
            android:text="@string/text_login_agreement_1" />

        <TextView
            android:id="@+id/btn_login_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_agreement_2"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/colorPrimaryBlue" />

    </LinearLayout>


</RelativeLayout>