<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edu_bind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_interest_label"
                android:textColor="@color/colorPrimaryBlue"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edu_bind_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_skip"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/interest_item_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_bind_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_interest_sure"
            android:textColor="@color/colorPrimaryWhite"
            android:background="@drawable/shape_toast_bg_gray"
            android:textSize="18sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>